// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComicsListItem should render correctly a nonactive list item 1`] = `
<section
  className="list-item"
  onClick={[Function]}
>
  <div
    className="list-item-cover"
  >
    <img
      alt="Superman"
      src="cover.png"
    />
  </div>
  <div
    className="list-item-description"
  >
    <div>
      <b>
        Superman
      </b>
    </div>
    <div
      className=""
    >
      by 
      Bernd
    </div>
    <div
      className=""
    >
      Price: 
    </div>
  </div>
</section>
`;

exports[`ComicsListItem should render correctly an active list item 1`] = `
<section
  className="list-item active"
  onClick={[Function]}
>
  <div
    className="list-item-cover"
  >
    <img
      alt="Superman"
      src="cover.png"
    />
  </div>
  <div
    className="list-item-description"
  >
    <div>
      <b>
        Superman
      </b>
    </div>
    <div
      className=""
    >
      by 
      Bernd
    </div>
    <div
      className=""
    >
      Price: 
    </div>
  </div>
</section>
`;

exports[`ComicsListItem should render correctly without writer 1`] = `
<section
  className="list-item active"
  onClick={[Function]}
>
  <div
    className="list-item-cover"
  >
    <img
      alt="Superman"
      src="cover.png"
    />
  </div>
  <div
    className="list-item-description"
  >
    <div>
      <b>
        Superman
      </b>
    </div>
    <div
      className=""
    >
      Price: 
    </div>
  </div>
</section>
`;
